# SPICE_Margarita_31P

./: .gitignore  Hess10.sh  LICENSE  README.md  Uncert_Toep_BatchVox10.py  environment.yml  pyproject.toml  submit_hessian.sh  submit_lobpcg.sh
2pi_csap_SMF_MRSI/: Asc.json  Asp.json  Cr.json  GPC.json  GSH.json  Glu.json  Ins.json  PCr.json  PE.json
basis/: Ala.json  GABA.json  Glc.json  Gln.json  Lac.json  NAA.json  NAAG.json  PCh.json  Scyllo.json  Tau.json
data/: README.md
scripts/: 01_coil_correction.py  01_coilmap.py  02_B0_map_estimation.py  02_b0_correction.py  03_lipid_removal.py  03b_lipid_removal.py  04_run_spice.py  04b_SPICE_refit.py  04c_SPICE_uoss_refit.py  04d_SPICE_lam20_refit.py  05_adjoint_recon.py  05_spectral_fitting.py  05b_adjoint_recon_concept.py  05c_interactive_viewer.py  05c_spice_recon_31p.py  05d_dynamic_adjoint_31p.py  06_iterative_nufft_recon.py  06b_iterative_recon_31p.py  07_adjoint_recon.py  07_spectral_fitting.py  08_Laplacian_Covariance.py  08_prefitting_uncertainty.py  08_uncertainty.py  08b_Laplacian_Covariance_joint.py  09_prefitting_uncertainty_laplacian.py  09_uncertainty_postproc.py  10_prefitting_uncertainty_lobpcg.py  10_uncertainty_lobpcg.py  11_analytical_conc_uncertainty.py  11_laplacian_conc_uncertainty.py  12_MC_conc_uncertainty.py  12_analytical_conc_uncertainty.py  recon_concept_twix_31p.py  recon_crt_mrinufft.py  test_adjoint_recon.py
spice_mrsi/: __init__.py  coil_sens.py  fitting.py  recon.py  xcorr.py
utils/: graph.py  io.py  lipid.py  plotting.py  recon.py  signal.py  simulation.py  uncertainty.py  utils.py
